Add url variable, fix css

--- a/nginx.conf
+++ b/nginx.conf
@@ -56,7 +56,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        location ~* "^/[a-zA-Z0-9_.-]{5,15}$" {
+        location ~* "^/[a-zA-Z0-9_.-]{5,15}$" { #getting id on url and redirecting to backend with that id
             rewrite ^/(.*)$ http://192.168.0.13:5000/$1 redirect;
         }
         #error_page  404              /404.html;
