--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "helmet": "^4.6.0",
     "mongoose": "^5.13.0",
     "morgan": "^1.10.0",
-    "nanoid": "^3.1.23"
+    "nanoid": "^3.1.23",
+    "redis": "^3.1.2"
   }
 }
